
   o FEATURE: Richardson Rotamers (instead of Dunbrack's) are used by
     default. Rotamers are named int the dialog (the probability
     limits are no longer meaninful) [Dirk Kostrewa]

   o FEATURE: New environment variable COOT_SCHEME_EXTRA_DIR introduced. If the 
     directory pointd to by COOT_SCHEME_EXTRA_DIR exists, then Coot
     will read all the .scm files in that directory

   o FEATURE: Cis-peptide Gui added to extensions

   o FEATURE: Chiral volumes are added to the geometry target
     function. Check for chiral volume and cis-peptide errors introduced
     on refinement.  Add Chi-squared values to Accept/Reject dialog

   o FEATURE: Old backup-files cleaner-upper added.

   o FEATURE: CCP4i aliases are also added to the Project Dir options in the
     file selector [Ingo Korndoerfer]

   o FEATURE: Multiple model ligand overlaying [Bob Nolte]

   o FEATURE: NCS matching (Kleywegt Plots) work using SHELXL molecules

   o FEATURE: Add "Laplacian" transform (the magnitude of the curvature)
     function for maps

   o FEATURE: Select residues (for new molecule) by sphere [Joel Bard]

   o FEATURE: Cell expansion/contraction function for EM users

   o FEATURE: skeletons now appear in Raster3D output and are properly
     coloured using the colour wheel.

   o FEATURE: a new command has been introduce, so that one can highlight the 
     command equivalent of gui operations using colour.  e.g.: 
     (set-console-display-commands-hilights 1 1 4).

   o FEATURE: binary builds now are scriptable in Python and scheme.

   o FEATURE: GTK2 version has toolbar modelling buttons.

   o FEATURE: a mapman bones reader has been introduced.

   o FEATURE: Key presses . and , now work when navigating the checked
     waters "baddies" dialog.

   o FEATURE: label-all-CAs function added.

   o FEATURE: Dynamic Distances (distances to intermediate atoms)
     added [Found in the Distances and Angles dialog].
