@@ -1,0 +1,21 @@
+
+
+#ifdef COMPILE_IN_SCM_TESTING
+
+#ifdef USE_GUILE
+
+#include "testing-scm.hh"
+
+SCM test_function_chi_angles(SCM scm_in) {
+
+   SCM r = SCM_BOOL_F;
+
+
+
+   return r;
+}
+
+
+
+#endif  // GUILE
+#endif  // COMPILE_IN_SCM_TESTING
